# NeoAntigen-Studio

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Architecture_Traceability_Matrix.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOC_INDEX.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  commit_msg.txt  docker-compose.yml  job_manifest.example.json  pyproject.toml  run_tests.py  start_neoantigen_studio.sh  start_neoantigen_studio_full.bat  start_neoantigen_studio_light.bat
%TEMP%/: tesla_cache_real.json
agent/: README.md  __init__.py  checklist.md  manifest.json  report_bootstrap.md  report_phase1_foundation_delta_2026-03-15.md  report_phase2_execution_learnings_2026-03-15.md  report_phase2_execution_learnings_2026-03-26.md  report_phase3_execution_learnings_2026-03-15.md  report_phase4_execution_learnings_2026-03-15.md  report_phase5_execution_learnings_2026-03-15.md  report_phase6_execution_learnings_2026-03-16.md  report_phase7_execution_learnings_2026-03-17.md
benchmark/: README.md  TESLA_validation.csv  run_real_benchmark.sh  run_tesla_benchmark.py  run_tesla_benchmark_real.py  tesla_benchmark.py  tesla_manual_results.json  tesla_validated.csv
containers/: Dockerfile.api  Dockerfile.worker
docs/: ai_bug_reports.md  browser_help.txt  qa_scratchpad_temp.md
envs/: neoantigen.yml
schemas/: experiment_label.json  lims_manifest.json
scripts/: apply_postgres_migrations.py  docker_start.sh  docker_stop.sh  generate_approval_token.py  generate_realistic_peptides.py  install_netmhcpan.sh  run_iedb_predictions_v2.py  run_pipeline_cli.py  setup_predictors.sh  test_full_approval_flow.py  test_full_approval_flow.sh  validate_all_predictors.py
tests/: conftest.py  test_acquisition.py  test_api.py  test_apply_postgres_migrations_script.py  test_benchmark.py  test_cohort_analysis.py  test_deletion_api.py  test_docker_config.py  test_ensembl_lookup.py  test_hla_typing.py  test_iedb_loader.py  test_indexer.py  test_job_store.py  test_jobs_api.py  test_label_ingest.py  test_learnings_store.py  test_ml_trainer.py  test_model_pipeline_api.py  test_mrna_designer.py  test_nextflow_config.py  (+22 more)
(+92 files in other folders)
