[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "neoantigen-studio-agent"
version = "0.1.0"
description = "Research-grade neoantigen prediction pipeline with real MHC-I binding predictions (MHCflurry 2.0, NetMHCpan via IEDB API), HLA typing, TCR recognition, cohort analysis, and Nextflow HPC workflow. Designed for academic and clinical research."
authors = [
  { name = "NeoAntigen-Studio Contributors" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["neoantigen", "MHC binding", "immunoinformatics", "cancer immunotherapy", "HLA typing", "NetMHCpan", "MHCflurry", "pipeline", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.10"
dependencies = [
  "pydantic==2.10.6",
  "pytest==8.3.4",
  "jsonschema==4.26.0",
  "fastapi==0.109.0",
  "httpx==0.27.2",
  "uvicorn[standard]==0.27.1",
  "structlog==24.4.0",
  "prometheus-client==0.21.0",
  "pydantic-settings>=2.0.0",
  "pyyaml>=6.0.0",
  "requests==2.31.0",
  "dnachisel==3.2.16",
  "celery==5.3.6",
  "viennarna>=2.6.4",
  "joblib==1.3.2",
  "scikit-learn>=1.5.2",
  "numpy==2.4.3",
  "pandas>=2.0",
  "psycopg[binary]"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio>=0.24,<1.0"
]

[tool.setuptools.packages.find]
include = ["services*", "benchmark*", "agent*"]
exclude = ["tests*", "data*", "envs*", "infra*", "schemas*", "pipelines*", "workflows*", "containers*", "migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
cache_dir = ".pytest_cache_neoantigen"
pythonpath = ["."]
markers = [
  "network: marks tests that require external network access (deselect with '-m not network')",
  "slow: marks tests that are slow to run (deselect with '-m not slow')",
]
